tests/success/implicit_extension.lang
fn main() -> i32 {
    // Implicit int extension cast.
    let foo: i16 = 5;
    let bar: i32 = foo + 5;
    return bar;
}
