tests/compile-error/use_before_init.lang
fn main() -> i32 {
    let a: i32;
    let b: i32 = a;
    let c: i32;
    if (15 < 10) {
        c = 5;
    }
    return c;
}
